--- a/index.html
+++ b/index.html
@@ -20,13 +20,23 @@
     </p>
 
     <p>
+      <a href="http://twitter.com/learnenough" target="_blank"
+      style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png">
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="http://twitter.com/learnenough" target="_blank">here</a>
+    </p>
+
+    <p>
       HTML was created by the original "web developer", computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
       Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to
       share pictures of his cat, but it would be cool if it were.
     </p>
-
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329" target="_blank">
     <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
 
     <h2>Background</h2>
 
@@ -55,7 +65,7 @@
     <h3>Michael Hartl</h3>
 
     <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
-     alt="Michael Hartl">
+         alt="Michael Hartl">
 
     <p>
       Michael is the creator of the <a href="http://railstutorial.org/">
@@ -93,7 +103,7 @@
 
     <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
      alt="Nick Merwin">
-     
+
     <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy
       Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd
