--- a/moby_dick.html
+++ b/moby_dick.html
@@ -24,7 +24,7 @@
           American literature.
       </p>
     </div>
-    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
+    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg" alt="Sperm Whale">
       <img src="images/sperm_whales.jpg">
     </a>
 
