Fixed another error

--- a/moby_dick.html
+++ b/moby_dick.html
@@ -24,8 +24,8 @@
           American literature.
       </p>
     </div>
-    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg" alt="Sperm Whale">
-      <img src="images/sperm_whales.jpg">
+    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
+      <img src="images/sperm_whales.jpg" alt="Sperm Whale">
     </a>
 
     <div>
