--- a/moby_dick.html
+++ b/moby_dick.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Moby Dick</title>
     <meta charset="utf-8">
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
     <!--much here to be styled, will do so in last section -->
     <header>
   <h1>A Softcover Book Report</h1>
@@ -60,5 +65,26 @@
         alert!</em>—is a giant white whale) is the book itself.
       </p>
     </div>
+    <h4>Our top 3 favorite things about Moby Dick</h4>
+
+    <ol>
+      <li>Vengeful Whale</li>
+      <li>Salty sailors</li>
+      <li>The names "Queepueg" and "Starbuck"</li>
+    </ol>
+
+    <h4>Other things about Moby Dick</h4>
+
+    <ul>
+      <li>
+        Chapter after chapter (after chapter) of meticulous detail about whaling
+      </li>
+      <li>
+        The story pretty much
+        <a href="https://en.wikipedia.org/wiki/Essex_(whaleship)"
+            target="_blank">happened in real life</a>
+      </li>
+      <li>Mad sea captains are fun</li>
+    </ul>
   </body>
 </html>
