--- a/tags.html
+++ b/tags.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+  <header>
     <h1>Important HTML tags</h1>
-
+  </header>
     <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank">
       <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
     </a>
@@ -21,11 +27,13 @@
     </p>
 
     <p>
-      The tables below don't include all HTML tags, but they do list many of
-      the most important ones.
+      <span>The tables below don't include all HTML tags, but they do list many of
+      the most important ones.</span>
     </p>
-
+    <div>
+  <header>
     <h2>Block Elements</h2>
+  </header>
     <table>
       <tr>
         <th>Tag</th>
@@ -35,37 +43,39 @@
       <tr>
         <td><code>h1</code>&ndash;<code>h6</code></td>
         <td>headings</td>
-        <td>include a heading (levels 1&ndash;6)</td>
+        <td><span>include a heading (levels 1&ndash;6)</span></td>
       </tr>
       <tr>
         <td><code>p</code></td>
         <td>paragraph</td>
-        <td>include a paragraph of text</td>
+        <td><span>include a paragraph of text</span></td>
       </tr>
       <tr>
         <td><code>table</code></td>
         <td>table</td>
-        <td>include a table</td>
+        <td><span>include a table</span></td>
       </tr>
       <tr>
         <td><code>tr</code></td>
         <td>table row</td>
-        <td>include a row of data</td>
+        <td><span>include a row of data</span></td>
       </tr>
       <tr>
         <td><code>th</code></td>
         <td>table header</td>
-        <td>make a table header</td>
+        <td><span>make a table header</span></td>
       </tr>
       <tr>
         <td><code>td</code></td>
         <td>table data</td>
-        <td>include a table data cell</td>
+        <td><span>include a table data cell</span></td>
       </tr>
     </table>
-
+  </div>
+  <div>
+  <header>
     <h2>Inline Elements</h2>
-
+  </header>
       <table>
         <tr>
           <th>Tag</th>
@@ -113,6 +123,6 @@
           <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
         </tr>
       </table>
-
+    </div>
   </body>
 </html>
