--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
+    <div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -43,6 +43,20 @@
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329" target="_blank">
     <img src="images/kitten.jpg" alt="An adorable kitten">
     </a>
+
+    <h2>Quotations</h2>
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #fafafa;">
+    <p>
+      <em>Don't believe every quote you read on the Internet.</em>
+      <br>
+      -Abraham Lincoln
+    </p>
+  </blockquote>
 
     <h2>Background</h2>
 
